--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -11,24 +11,57 @@
     android:orientation="vertical"
     tools:context="com.gomart.guildbuddy.ui.MainActivity">
 
-    <EditText
-        android:id="@+id/edt_realm"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Realm"
-        android:maxLines="1"
-        android:inputType="text"/>
-    <EditText
-        android:id="@+id/edt_guildName"
-        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_centerInParent="true">
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/edt_realm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Realm"
+                android:maxLines="1"
+                android:inputType="text"
+                android:layout_alignParentTop="true"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/edt_guildName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Guild Name"
+                android:maxLines="1"
+                android:inputType="text"
+                android:imeOptions="actionDone"
+                android:layout_below="@+id/edt_realm"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/btn_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            style="@style/buttonStyle"
+            android:text="Search"
+            android:layout_below="@+id/edt_guildName"/>
+
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Guild Name"
-        android:maxLines="1"
-        android:inputType="text"
-        android:imeOptions="actionSend"/>
-    <Button
-        android:id="@+id/btn_search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Search" />
-</LinearLayout>
+        android:src="@mipmap/legion_logo"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
+    
+</RelativeLayout>
