--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="customPrimary">#388E3C</color>
+    <color name="customPrimaryDark">#1B5E20</color>
+    <color name="customAccent">#26A69A</color>
+
+    <!--BUTTON-->
+    <color name="button">#43A047</color>
+    <color name="buttonText">#E8F5E9</color>
+    <color name="buttonPressed">#A5D6A7</color>
 </resources>
