saving search info in shared prefs; nested api calls for further character data such as avatar image;

--- a/app/src/main/res/layout/fragment_roster.xml
+++ b/app/src/main/res/layout/fragment_roster.xml
@@ -11,6 +11,14 @@
         android:layout_gravity="center"
         android:visibility="gone" />
 
+    <TextView
+        android:id="@+id/txtError"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="Oops! Something went wrong"
+        android:visibility="gone" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
