--- a/app/src/main/res/layout/fragment_roster.xml
+++ b/app/src/main/res/layout/fragment_roster.xml
@@ -16,8 +16,8 @@
 
         <TextView
             android:id="@+id/txtError"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="Oops! Something went wrong"
             android:visibility="gone" />
