change guild implemented; back button(aka up button) fragment navigation removed for better UX; menu added and implemente in RosterFragment.kt

--- a/app/src/main/res/menu/roster_menu.xml
+++ b/app/src/main/res/menu/roster_menu.xml
@@ -5,6 +5,10 @@
         android:icon="@android:drawable/ic_menu_search"
         android:title="@string/search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
+
+    <item android:id="@+id/changeGuild"
+        android:title="@string/change_guild"
+        app:showAsAction="never"/>
 
 </menu>
