region selection feature implemented; api interceptor added; cleanup in some modules; BaseRepository.kt implemented;

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,5 +26,8 @@
         <argument
             android:name="guildName"
             app:argType="string" />
+        <argument
+            android:name="region"
+            app:argType="string" />
     </fragment>
 </navigation>
